[gd_scene load_steps=12 format=3 uid="uid://p86u62q8dtxq"]

[ext_resource type="Script" uid="uid://cljph4wryb2nv" path="res://battle/battle.gd" id="1_k054m"]
[ext_resource type="Texture2D" uid="uid://bkx22jvnlshd0" path="res://assets/sprites/Border EB.png" id="2_4mnim"]
[ext_resource type="Texture2D" uid="uid://cd16g5n5ul1i5" path="res://assets/sprites/cursor.png" id="4_6hnvb"]
[ext_resource type="Script" uid="uid://ca0f7megfspad" path="res://battle/debuging_circle.gd" id="4_137ac"]
[ext_resource type="Texture2D" uid="uid://bngc4pp37q1wy" path="res://assets/sprites/wrench.png" id="5_4mnim"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l1kiu"]
content_margin_left = 10.0
content_margin_top = 15.0
content_margin_right = 10.0
content_margin_bottom = 15.0
texture = ExtResource("2_4mnim")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="Animation" id="Animation_mv724"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3clg7"]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_m3gw1"]
resource_name = "point_at_ally"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-32, 32), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1yo1d"]
resource_name = "point_at_enemy"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(32, 32), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qkjp5"]
_data = {
&"RESET": SubResource("Animation_mv724"),
&"fade": SubResource("Animation_3clg7"),
&"point_at_ally": SubResource("Animation_m3gw1"),
&"point_at_enemy": SubResource("Animation_1yo1d")
}

[node name="Battle" type="Node"]
script = ExtResource("1_k054m")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(288, 162)

[node name="TurnManager" type="Node" parent="."]

[node name="Battlers" type="Node" parent="."]

[node name="TextWindow" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(0, 40)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_l1kiu")

[node name="Label" type="Label" parent="TextWindow"]
custom_minimum_size = Vector2(550, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "sample
sample
sample
sample
sample"
vertical_alignment = 1
autowrap_mode = 3

[node name="BattleMusic" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
autoplay = true

[node name="AllySpawnCircle" type="Marker2D" parent="."]
position = Vector2(400, 200)
script = ExtResource("4_137ac")

[node name="SpawnPoint" type="Marker2D" parent="AllySpawnCircle"]
position = Vector2(0, -80)

[node name="EnemySpawnCircle" type="Marker2D" parent="."]
position = Vector2(100, 200)
script = ExtResource("4_137ac")

[node name="SpawnPoint" type="Marker2D" parent="EnemySpawnCircle"]
position = Vector2(0, -80)

[node name="Cursor" type="Sprite2D" parent="."]
scale = Vector2(0.08, 0.08)
texture = ExtResource("4_6hnvb")
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cursor"]
libraries = {
&"": SubResource("AnimationLibrary_qkjp5")
}
autoplay = "point_at_ally"

[node name="UI_Layer" type="CanvasLayer" parent="."]

[node name="SettingsButton" type="Button" parent="UI_Layer"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -51.0
offset_top = 5.0
offset_right = -6.0
offset_bottom = 50.0
grow_horizontal = 0
icon = ExtResource("5_4mnim")
expand_icon = true
